[project]
name = "circle_detection"
description = "ComfyUI_Circle_Detection detects circles using a mathematical method called Hough's Transform for the detection."
version = "0.0.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI_Circle_Detection"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI_Circle_Detection"
Icon = "https://github.com/zentrocdot/ComfyUI_Circle_Detection/blob/main/images/original_512x512.png"
