[project]
name = "ComfyUI-Circle_Detection"
description = "ComfyUI-Circle-Detection detects circles using a mathematical method called Hough's Transform for the detection of the circles."
version = "0.0.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI_Circle_Detection"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI_Circle_Detection"
Icon = "https://github.com/zentrocdot/ComfyUI_Circle_Detection/blob/main/images/original_512x512.png"
